package com.cafepos.common;

public interface Priced {
    Money price();
    }
